--- a/tasks/package.json
+++ b/tasks/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-select": "^5.8.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
