--- a/tasks/package.json
+++ b/tasks/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "netlify": "^13.1.14",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
